a totally vuln free pull request

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
 
     <script src="{{ url_for('static', filename='assets/axios.min.js') }}"></script>
     <script src="{{ url_for('static', filename='assets/global.js') }}"></script>
+    <script src="{{ url_for('static', filename='assets/myotherasset.js') }}"></script>
     <script>
         // var googleCaptchaKey = '6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI';
         // var googleCatpchaSecretKey = '6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe';
