--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -16,6 +16,10 @@
       <a class="navbar-item" href="{{ url_for('home') }}">
         Home
       </a>
+      
+      <a class="navbar-item" href="{{ url_for('home') }}">
+        No place like home. 
+      </a>
 
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
