totally vuln free commit

--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -17,6 +17,11 @@
         Home
       </a>
 
+      <a class="navbar-item" href="{{ url_for('home') }}">
+        There's no place like Home.
+      </a>
+
+
       <div class="navbar-item has-dropdown is-hoverable">
         <a class="navbar-link">
           SQL Injection
